--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sval",
-  "version": "0.4.8",
+  "version": "0.5.0",
   "description": "A javascript interpreter written in javascript",
   "main": "dist/sval.js",
   "module": "dist/sval.js",
@@ -31,10 +31,13 @@
   },
   "homepage": "https://github.com/Siubaak/sval#readme",
   "dependencies": {
-    "acorn": "^6.4.1"
+    "acorn": "^6.4.1",
+    "escodegen": "^2.0.0",
+    "globals": "^13.12.1"
   },
   "devDependencies": {
     "@types/acorn": "^4.0.5",
+    "@types/escodegen": "^0.0.7",
     "@types/estree": "0.0.39",
     "@types/jest": "^24.9.1",
     "rollup": "^1.32.1",
